Fix breaking space

--- a/Play1.html
+++ b/Play1.html
@@ -53,8 +53,8 @@ When a page fault is resolved for a page in a swap set, all the pages in the swa
 <table>
   <tr>
     <th>Column&nbsp;1</th>
-    <th>Column 2</th>
-    <th>Column 3</th>
+    <th>Column&nbsp;2</th>
+    <th>Column&nbsp;3</th>
   </tr>
   <tr>
     <td>Wait</td>
